--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,12 +13,15 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        //Enabling multidex support.
+        multiDexEnabled true
     }
 
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            debuggable = true
         }
     }
 
@@ -49,11 +52,16 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
+    //misc
+    implementation 'com.github.GrenderG:Toasty:1.5.2'
+    implementation 'com.google.code.gson:gson:2.8.2'
+    compile 'com.wang.avi:library:2.1.3'
+    compile 'com.yarolegovich:discrete-scrollview:1.5.1'
+
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'com.google.android.material:material:1.1.0'
     implementation "androidx.navigation:navigation-fragment-ktx:2.3.0-alpha06"
     implementation "androidx.navigation:navigation-ui-ktx:2.3.0-alpha06"
     implementation 'de.hdodenhof:circleimageview:2.2.0' /*circleimage*/
-
 }
