--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.cengonline">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
+    <supports-screens android:resizeable="true"
+        android:anyDensity="true"
+        android:largeScreens="true"
+        android:normalScreens="true"
+        android:smallScreens="true"
+        android:xlargeScreens="true">
+    </supports-screens>
+
 
     <application
         android:allowBackup="true"
@@ -11,7 +21,35 @@
         android:label="@string/app_name"
         android:roundIcon="@drawable/learning"
         android:supportsRtl="true"
+        android:usesCleartextTraffic="true"
         android:theme="@style/AppTheme">
+        <activity
+            android:name=".Attempt_Quiz_Section.Tests"
+            android:theme="@style/MyMaterialTheme"
+            android:exported="false" />
+        <activity
+            android:name=".Attempt_Quiz_Section.AttemptTest"
+            android:theme="@style/MyMaterialTheme"
+            android:exported="false" />
+        <activity
+            android:name=".Create_Quiz.CustomQuiz"
+            android:theme="@style/MyMaterialTheme"
+            android:exported="false" />
+        <activity
+            android:name=".ui.dialog.EditQuizDialog"
+            android:theme="@style/MyMaterialTheme"
+            tools:ignore="Instantiatable" />
+        <activity
+            android:name=".ui.dialog.NewQuizDialog"
+            android:theme="@style/MyMaterialTheme"
+            tools:ignore="Instantiatable" />
+        <activity
+            android:name=".ui.course.QuizFragment"
+            android:theme="@style/MyMaterialTheme" />
+        <activity
+            android:name=".ui.course.BaganCourseTemplate"
+            android:theme="@style/MyMaterialTheme"
+            tools:ignore="Instantiatable" />
         <activity
             android:name=".SplashActivity"
             android:theme="@style/MyMaterialTheme">
@@ -24,35 +62,38 @@
         <activity
             android:name=".ui.message.SpecialMessageFragment"
             android:theme="@style/MyMaterialTheme"
-            android:windowSoftInputMode="stateHidden"></activity>
+            android:windowSoftInputMode="stateHidden" />
         <activity
             android:name=".ui.course.AssignmentListFragment"
-            android:theme="@style/MyMaterialTheme"></activity>
+            android:theme="@style/MyMaterialTheme" />
         <activity
             android:name=".ui.course.AssignmentFragment"
-            android:theme="@style/MyMaterialTheme"></activity>
+            android:theme="@style/MyMaterialTheme" />
         <activity
             android:name=".ui.course.CourseFragment"
-            android:theme="@style/MyMaterialTheme"></activity>
+            android:theme="@style/MyMaterialTheme" />
         <activity
             android:name=".ui.course.AnnouncementFragment"
-            android:theme="@style/MyMaterialTheme"></activity>
+            android:theme="@style/MyMaterialTheme" />
         <activity
             android:name=".ui.course.PostFragment"
-            android:theme="@style/MyMaterialTheme"></activity>
+            android:theme="@style/MyMaterialTheme" />
         <activity
             android:name=".ui.course.CommentFragment"
-            android:theme="@style/MyMaterialTheme"></activity>
+            android:theme="@style/MyMaterialTheme" />
         <activity
             android:name=".MainActivity"
             android:label="@string/title_activity_main"
-            android:theme="@style/MyMaterialTheme"></activity>
+            android:theme="@style/MyMaterialTheme" />
         <activity
             android:name=".RegisterActivity"
             android:theme="@style/MyMaterialTheme" />
         <activity
             android:name=".LoginActivity"
-            android:theme="@style/MyMaterialTheme"></activity>
+            android:theme="@style/MyMaterialTheme" />
+
+        <service android:name=".NotificationActivity.NotificationService" />
+
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
